my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EINVOVER_confidentiality/EINVOVER_confidentiality.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EINVOVER_confidentiality.dml:7:7: In test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EINVOVER_confidentiality.dml:10:1: error EINVOVER: invalid override of non-default declaration _confidentiality
C:\Users\nagen\simics-projects\my-intel-simics-project-1\win64\bin\dml\1.4\dml-builtins.dml:665:5: overridden assignment
